# researcher

./: .dockerignore  Dockerfile  README.md  api.py  app.py  pyproject.toml  requirements.txt
src/create_report/: crew.py  main.py
src/create_report/config/: agents.yaml  tasks.yaml
src/create_report/tools/: custom_tool.py
