[project]
name = "create_report"
version = "0.1.0"
description = "create-report using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "pysqlite3-binary == 0.5.4"
]

[project.scripts]
create_report = "create_report.main:run"
run_crew = "create_report.main:run"
train = "create_report.main:train"
replay = "create_report.main:replay"
test = "create_report.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
